# ccstatusline-editor

./: .gitignore  README.md  app.py  pyproject.toml
ccstatusline_editor/: app.py
ccstatusline_editor/templates/: index.html
templates/: index.html
